--- a/index.html
+++ b/index.html
@@ -282,9 +282,9 @@
       <div class="image-box">
         <img draggable="false" src="./assets/images/contact1.png" alt="">
       </div>
-    <form id="contact-form" class = "con-form" onsubmit="sendmail(); reset(); return false;">
+    <form id="contact-form" class = "con-form" action="https://formsubmit.co/mayank2808sharma@gmail.com" method="post">
       
-      <div class="form-group" onsubmit="sendEmail(); reset(); return false;">
+      <div class="form-group" >
         <div class="field">
           <input id="name" class="name" type="text" name="name" placeholder="Name" required>
           <i class='fas fa-user'></i>
@@ -355,7 +355,7 @@
 
 
 <!-- ==== ALL MAJOR JAVASCRIPT CDNS STARTS ==== -->
-<script src="https://smtpjs.com/v3/smtp.js"></script>
+<!-- <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script>
       function sendmail() {
         const name = document.getElementById("name").value;
@@ -374,7 +374,7 @@
           Body: ans,
         }).then((message) => alert(message));
       }
-    </script>
+    </script> -->
 <!-- jquery cdn --> 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
