captcha spelling mistake

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <!-- Honeypot -->
       <input type = "text" name="_honey" style="display: none;">
       <!-- Disable captcha -->
-      <input type="hidden" name="captcha" value="false">
+      <input type="hidden" name="_captcha" value="false">
       <div class="form-group" >
         <div class="field">
           <input id="name" class="name" type="text" name="name" placeholder="Name" required>
