changing resume link

--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
         Computer Science Sophomore and a machine learning enthusiastic who is currently a front-end developer creating user friendly websites and focusing on improving his problem solving skills. </p>
 
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1BfNGv-CiP7QSPSQ95eIdioHFBMsHiXU9/view?usp=sharing" target="_blank"<span>Resume</span>
-                <i class="fas fa-chevron-right"></i>
+            <a href="https://drive.google.com/file/d/1oranydCKUcMw1G4upT0S1yQuRkza_xB3/view?usp=sharing"></i>
             </a>
         </div>
 
