--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
           <div class="resumebtn">
             <a
-              href="https://drive.google.com/file/d/1pfjCYKb-caHRdQw1WMV4Fv2xnE2sc4KK/view?usp=sharing"
+              href="https://drive.google.com/file/d/17i0tNG65ItxboFkN04RERcC12Gg0Tet9/view?usp=share_link"
               target="blank"
             >
               <div id="resume-div">&nbsp Resume</div>
