Changing resume link

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <a
                 class="linkedin"
                 aria-label="LinkedIn"
-                href="https://www.linkedin.com/in/mayank-sharma-0b321a236"
+                href="https://www.linkedin.com/in/mayanksharma2808/"
                 target="_blank"
                 ><i class="fab fa-linkedin"></i
               ></a>
@@ -138,14 +138,13 @@
         <div class="content">
           <h3>This is Mayank Sharma</h3>
           <p>
-            Computer Science Sophomore and a machine learning enthusiastic who
-            is currently a front-end developer creating user friendly websites
-            and focusing on improving his problem solving skills.
+            a computer science junior with experience in Fullstack and Solidity development.
+            He currently works as a FullStack Blockchain Developer at QuillAudits.
           </p>
 
           <div class="resumebtn">
             <a
-              href="https://drive.google.com/file/d/17i0tNG65ItxboFkN04RERcC12Gg0Tet9/view?usp=share_link"
+              href="https://drive.google.com/file/d/1ZJO-gLA4hN3dcQ0h07QAJh3OmmOAdooX/view?usp=sharing"
               target="blank"
             >
               <div id="resume-div">&nbsp Resume</div>
